force-app/main/default/objects/Invoice_Line_Item__c/fields/Base_Unit__c.field-meta.xml
<CustomField>
    <fullName>Base_Unit__c</fullName>
    <label>Base Unit</label>
    <length>5</length>
    <type>Text</type>
</CustomField>