force-app/main/default/objects/Invoice_Line_Item__c/fields/Billed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Billed_Quantity__c</fullName>
    <label>Billed Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>