force-app/main/default/objects/Invoice_Line_Item__c/fields/Currency_Key__c.field-meta.xml
<CustomField>
    <fullName>Currency_Key__c</fullName>
    <label>Currency Key</label>
    <length>3</length>
    <type>Text</type>
</CustomField>