force-app/main/default/objects/Invoice_Line_Item__c/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <label>Material Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>