force-app/main/default/objects/Invoice_Line_Item__c/fields/Pricing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Unit__c</fullName>
    <label>Pricing Unit</label>
    <length>5</length>
    <type>Text</type>
</CustomField>