force-app/main/default/objects/Invoice_Line_Item__c/fields/Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unit__c</fullName>
    <label>Sales Unit</label>
    <length>5</length>
    <type>Text</type>
</CustomField>